--- a/workplace/usermanager/src/main/resources/templates/index.html
+++ b/workplace/usermanager/src/main/resources/templates/index.html
@@ -1,10 +1,148 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head></head>
+<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+
+<!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"/>
+
+<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+<script src="https://cdn.bootcss.com/jquery/1.10.2/jquery.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 <body>
-$END$
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Brand</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Link</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Link</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
+<div id="table" class="UserTable">
+    <table class="table table-bordered" width="80%" align="center">
+        <tbody id="tbody"></tbody>
+    </table>
+</div>
+
+<div style="flex-direction: row">
+    <button id="AddButton" class='btn btn-default' onClick="jumpToAddPage()">add New User</button>
+</div>
+
+
+<script type="text/javascript" th:inline="javascript">
+
+    console.log("get in js");
+    $("tbody").ready(function refreshUserTable(){
+
+        $.ajax({
+            type:"GET",
+            url:"/api/user/list",
+            data:{},
+            dataType:"json",
+            async:true,
+            success:function(msg){
+                if (msg != null) {
+                    var str = "<tr> " +
+                        "<th align='center'>id</th>"+
+                        "<th align='center'>Name</th>" +
+                        "<th align='center'>age</th>" +
+                        "<th align='center'>Date</th>" +
+                        "<th align='center'>address</th>" +
+                        "<th align='center'>Manipulation</th>" +
+                        "</tr>";
+                    //var data = msg.data;
+
+                    for (i in msg) {
+                        console.log("in for loop");
+                        str +=
+                            "<tr>" +
+                            "<td align='center'>" + msg[i].id+ "</td>" +
+                            "<td align='center'>" + msg[i].name + "</td>" +
+                            "<td align='center'>" + msg[i].age + "</td>" +
+                            "<td align='center'>" + msg[i].date + "</td>" +
+                            "<td align='center'>" + msg[i].addr + "</td>" +
+                            "<td align='center'> <button type='submit' id='updateButton' class='btn btn-default' >update</button> </td>"
+                            "</tr>";
+                    }
+                    console.log(str);
+                    $("tbody").html(str)
+                }
+                console.log("return successful+"+msg)
+            },
+            error:function(msg) {
+                console.log("返回失败"+msg)
+            }
+        })
+    })
+
+    function jumpToAddPage(){
+        $.ajax({
+            type:"GET",
+            url:"/user/add",
+            async:true,
+            success:function(data){
+                console.log("get in add page success"+data);
+                location.href = data;
+            },
+            error:function(){
+                console.log("get in add page failure");
+            }
+        })
+    }
+
+
+</script>
 </body>
 </html>
+
+
