--- a/workplace/usermanager/src/main/resources/templates/addPage.html
+++ b/workplace/usermanager/src/main/resources/templates/addPage.html
@@ -14,45 +14,76 @@
     <title>Create A New User</title>
 </head>
 <body>
-<form action="/api/user/add" class="form-horizontal">
+<form action="/api/user/save" method="post" class="form-horizontal" width="80%" align="center">
     <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+        <label for="inputName" class="col-sm-2 control-label">Name</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+            <input type="text" class="form-control" id="inputName" name="inputName" placeholder="Name">
         </div>
     </div>
     <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+        <label for="inputAge" class="col-sm-2 control-label">Age</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+            <input type="number" class="form-control" id="inputAge" name="inputAge" placeholder="age">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputDate" class="col-sm-2 control-label">createDate</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputDate" name="inputDate" placeholder="create date">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputAddr" class="col-sm-2 control-label">Address</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputAddr" name="inputAddr" placeholder="address">
         </div>
     </div>
 
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Create</button>
+            <button type="button" class="btn btn-default">Create</button>
         </div>
     </div>
 </form>
 
 <script type="text/javascript" th:inline="javascript">
-    $("button").click(function addNewUser(newName, newAge, newAddr){
+
+    $('button').on('click', function addNewUser(){
+
+        console.log("get in this function");
+        console.log($("#inputName").val());
+
+        // var data = ({     "name": "dnand",
+        //                   "age":20,
+        //                   "date":"12-22-2019",
+        //                   "addr":"chongiqng"});
+        var data = JSON.stringify({     "name": $('#inputName').val(),
+                                        "age":$("#inputAge").val(),
+                                        "date":$("#inputDate").val(),
+                                        "addr": $("#inputAddr").val()
+                                    });
+
         $.ajax({
             type:"POST",
             url:"/api/user/save",
-            data:JSON.stringify({name:newName, age:newAge, addr: newAddr}),
-            contentType:"application/json",
+            async:false,
+            data:data,
+            contentType:"application/json; charset=utf-8",
             dataType:"json",
-            success:function (data) {
-                console.log("add Successful"+JSON.stringify(data))
-                location.href = "index";
+            success:function (msg) {
+                console.log("add Successful"+msg);
+                window.location.href = "/user/index";
             },
-            error:function (data) {
-                console.log("add Failure"+JSON.stringify(data));
+            error:function (msg) {
+                console.log("add Failure" +msg);
+                alert("Create failure, Please refill your information!");
             }
         });
     })
+
+
 
 
 </script>
